# wx-test

./: .gitignore
backend/: Dockerfile  database.py  deps.py  main.py  models.py  pyproject.toml  schemas.py
backend/static/: MP_verify_JgwTRXZOymelUt80.txt
backend/tests/: conftest.py  test_admin_merchant_contacts.py  test_conversation_customer_api.py  test_conversation_merchant_api.py  test_env_loading.py  test_frontend_config.py  test_frontend_home_page.py  test_frontend_oauth_pages.py  test_harness_smoke.py  test_payment_callbacks.py  test_payment_flow.py  test_wechat_pay_security.py
backend/wechat/: config.py  crypto.py  menu.py  pay.py  template.py  token.py
docs/superpowers/plans/: 2026-04-16-customer-ui-redesign.md  2026-04-16-pre-order-consultation.md  2026-04-16-unified-messaging.md  2026-04-17-wechatpay-mock-to-prod.md  2026-04-18-unified-conversation-order-cards.md
docs/superpowers/specs/: 2026-04-16-customer-ui-redesign-design.md  2026-04-16-pre-order-consultation-design.md  2026-04-16-unified-messaging-design.md  2026-04-16-vue3-vite-full-migration-design.md  2026-04-17-wechatpay-mock-to-prod-design.md  2026-04-18-unified-conversation-order-cards-design.md  2026-04-18-wechat-hardcoded-config-cleanup-design.md
frontend/: admin.html  customer.html  index.html  merchant.html  service.html
